# java_bazel_proj

./: .bazelrc  BUILD  MODULE.bazel  README.md  container_test.yaml  maven_install.json  produce_error.sh  proj.bazelproject
proj/: BUILD  container_test.yaml  maven_install.json
run_configs/: build.xml  build_image.xml  checkstyle.xml  pmd.xml  run.xml  spotbugs.xml  tests.xml
src/main/java/com/test/: Main.java
src/test/java/com/test/: OtherTest.java  SomeTest.java
